# aws-serverless-comparison

./: .gitignore  README.md
classical-serverless/: README.md  api-gateway.tf  cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
classical-serverless/lambda-src/: classical-optimizer.py
comparison/: .env.example  README.md  test-classical.py  test-quantum.py
comparison-tests/: performance-comparison.py  pyproject.toml  requirements.txt  test-classical.py  test-quantum.py
comparison/comparison_tests/: __init__.py  performance_comparison.py  test_classical.py  test_quantum.py
quantum-serverless/: README.md  api-gateway.tf  braket.tf  cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
quantum-serverless/lambda-src/: quantum-optimizer.py  requirements.txt
