[tool.poetry]
name = "aws-serverless-comparison"
version = "0.1.0"
description = "Performance comparison tools for Classical vs Quantum Serverless Architectures"
authors = ["Farhan Aulianda <farhan@vessail.app>"]
readme = "README.md"
packages = [{include = "comparison_tests"}]

[tool.poetry.scripts]
test-classical = "comparison_tests.test_classical:main"
test-quantum = "comparison_tests.test_quantum:main"
performance-comparison = "comparison_tests.performance_comparison:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
matplotlib = "^3.10.3"
numpy = "^2.3.1"
pandas = "^2.3.0"
seaborn = "^0.13.2"
click = "^8.2.1"
rich = "^14.0.0"
pydantic = "^2.11.7"

